--- a/src/app/folders/details/details.component.scss
+++ b/src/app/folders/details/details.component.scss
@@ -23,12 +23,12 @@
 		}
 	}
 
-	monaco-editor, [monaco-editor] {
-		width: 100%;
-		display: block;
-	}
+	// monaco-editor, [monaco-editor] {
+	// 	width: 100%;
+	// 	display: block;
+	// }
 }
 
 monaco-editor, [monaco-editor] {
-	height: 500px !important;
+	height: 330px !important;
 }
