--- a/src/app/shared/components/list-folders/list-folders.component.html
+++ b/src/app/shared/components/list-folders/list-folders.component.html
@@ -13,7 +13,7 @@
   <mat-divider></mat-divider>
   <h3 mat-subheader>Files in current folder</h3>
   <div *ngFor="let file of (folders | async)?.paths">
-    <mat-list-item (click)="openFile(file)" class="pointer hover" *ngIf="file.file && isFileFromCurrentDirectory(file)">
+    <mat-list-item (click)="openFile(file)" class="pointer hover" *ngIf="file.file">
       <mat-icon mat-list-icon>note</mat-icon>
       <h4 mat-line>{{file.name}}</h4>
       <p mat-line> {{file.path}} </p>
